RESOLVED FIXED177980
Spelling error annotation should encompass hyphen in misspelled word that wraps across multiple lines
https://bugs.webkit.org/show_bug.cgi?id=177980
Summary Spelling error annotation should encompass hyphen in misspelled word that wra...
Daniel Bates
Reported 2017-10-05 17:12:19 PDT
Spelling error annotation should encompass hyphen in misspelled word that wraps across multiple lines.
Attachments
Patch and layout test (8.23 KB, patch)
2017-10-05 17:21 PDT, Daniel Bates
no flags
[Screenshot] Before patch (8.44 KB, image/png)
2017-10-05 17:21 PDT, Daniel Bates
no flags
[Screenshot] After patch (8.53 KB, image/png)
2017-10-05 17:21 PDT, Daniel Bates
no flags
[Screenshot] TextEdit (6.11 KB, image/png)
2017-10-05 17:22 PDT, Daniel Bates
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-05 17:13:06 PDT
Radar WebKit Bug Importer
Comment 2 2017-10-05 17:13:08 PDT
Daniel Bates
Comment 3 2017-10-05 17:15:41 PDT
Weird that two radars were filed.
Daniel Bates
Comment 4 2017-10-05 17:21:16 PDT
Created attachment 322945 [details] Patch and layout test
Daniel Bates
Comment 5 2017-10-05 17:21:38 PDT
Created attachment 322946 [details] [Screenshot] Before patch
Daniel Bates
Comment 6 2017-10-05 17:21:52 PDT
Created attachment 322947 [details] [Screenshot] After patch
Daniel Bates
Comment 7 2017-10-05 17:22:04 PDT
Created attachment 322948 [details] [Screenshot] TextEdit
Daniel Bates
Comment 8 2017-10-06 17:18:06 PDT
Comment on attachment 322945 [details] Patch and layout test Clearing flags on attachment: 322945 Committed r223013: <http://trac.webkit.org/changeset/223013>
Daniel Bates
Comment 9 2017-10-06 17:18:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.